<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sortlist"
        android:title="Sort" />
    <item
        android:id="@+id/retrieveDeleted"
        android:title="Retrieve Deleted List" />
    <item
        android:id="@+id/delete"
        android:title="Delete all Lists" />
    <item
        android:id="@+id/about"
        android:title="About" />
    <item
        android:id="@+id/add"
        android:title="Add List" />
</menu>