...
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lineItem2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <EditText
        android:id="@+id/lineItem2"
        android:layout_width="314dp"
        android:layout_height="37dp"
...
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineItem1"
        tools:text="lineitem2" />

    <EditText
        android:id="@+id/lineItem3"
        android:layout_width="314dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
...
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="lineitem1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="186dp"
        android:layout_height="22dp"
...
