<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/baseline_save_white_18dp"
        android:title="Item"
        android:visible="true"
        app:showAsAction="always" />
</menu>
